objects/ASI_CRM_Target_Product__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM CN Target Product</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN CRM Item Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Target Products</relationshipLabel>
        <relationshipName>Target_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_WS_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS/Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM CN Target Product</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN), Outlet (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Target Products</relationshipLabel>
        <relationshipName>Target_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Target Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000000}</displayFormat>
        <label>Target Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Products</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Target_Product</fullName>
        <active>true</active>
        <label>ASI CRM CN Target Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>